--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="web">
       <div class="card">
         <h2>Tecdiario</h2>
-        <p>Página web sobre noticias tecnológicas</p>
+        <p>Página sobre noticias tecnológicas</p>
       </div>
      <p><a href="https://tecdiario.com/" target="_blank">Visitar</a></p>
     </section>
