--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>Currículum</h2>
         <p>Experiencia laboral</p>
       </div>
-       <p><a href="docs/inaki_mendez_cv.pdf">DESCARGAR</a></p>
+       <p><a href="docs/inaki_mendez_cv.pdf" target="_blank">DESCARGAR</a></p>
     </section>
     <section class="linkedin">
       <div class="card">
