--- a/index.html
+++ b/index.html
@@ -24,21 +24,14 @@
         <h2>Currículum</h2>
         <p>Experiencia laboral</p>
       </div>
-       <p><a href="docs/inaki_mendez_cv.pdf" target="_blank">DESCARGAR</a></p>
+       <p><a href="docs/inaki_mendez_cv.pdf" target="_blank">DESCARGAR CURRÍCULUM</a></p>
     </section>
     <section class="linkedin">
       <div class="card">
-        <h2>linkedin</h2>
-        <p>Contacta conmigo</p>
+        <h2>Linkedin</h2>
+        <p>Conecta conmigo</p>
       </div>
-      <p><a href="https://www.linkedin.com/in/inakimendez/" target="_blank">Contactar</a></p>
-    </section>
-    <section class="web">
-      <div class="card">
-        <h2>Tecdiario</h2>
-        <p>Página sobre noticias tecnológicas</p>
-      </div>
-     <p><a href="https://tecdiario.com/" target="_blank">Visitar</a></p>
+      <p><a href="https://www.linkedin.com/in/inakimendez/" target="_blank">CONECTAR EN LINKEDIN</a></p>
     </section>
   </article>
 
