--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <h2>Currículum</h2>
         <p>Experiencia laboral</p>
       </div>
-       <p><a href="docs/inaki_mendez_cv.pdf" target="_blank">DESCARGAR CURRÍCULUM</a></p>
+       <p><a href="docs/inaki_mendez_cv.pdf" target="_blank">DESCARGAR</a></p>
     </section>
     <section class="linkedin">
       <div class="card">
-        <h2>Linkedin</h2>
-        <p>Conecta conmigo</p>
+        <h2>linkedin</h2>
+        <p>Contacta conmigo</p>
       </div>
       <p><a href="https://www.linkedin.com/in/inakimendez/" target="_blank">CONECTAR EN LINKEDIN</a></p>
     </section>
