--- a/personal-page-master/index.html
+++ b/personal-page-master/index.html
@@ -31,14 +31,7 @@
         <h2>linkedin</h2>
         <p>Contacta conmigo</p>
       </div>
-      <p><a href="https://www.linkedin.com/in/inakimendez/" target="_blank">Contactar</a></p>
-    </section>
-    <section class="web">
-      <div class="card">
-        <h2>Tecdiario</h2>
-        <p>Página sobre noticias tecnológicas</p>
-      </div>
-     <p><a href="https://tecdiario.com/" target="_blank">Visitar</a></p>
+      <p><a href="https://www.linkedin.com/in/inakimendez/" target="_blank">CONECTAR EN LINKEDIN</a></p>
     </section>
   </article>
 
