--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <header>
     <h1>Iñaki Méndez</h1>
     <q>Técnico Informático</q>
+    <br/>
+    <br/>
+    <a>Técnico informático apasionado de las nuevas tecnologías, con ganas de aprender, competitivo, <br/>
+      trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.</a>
   </header>
 
   <article>
