--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
   </article>
 
   <footer>
-    <p><a href="mailto:me@inakimendez.com">me@inakimendez.com</a></p>
+    <div class="shared-panel">
+      <a href="https://www.facebook.com/inakimendezm" target="_blank">Facebook</a> <a>|</a>
+      <a href="https://twitter.com/inaki_mendez" target="_blank">Twitter</a> <a>|</a>
+      <a href="https://api.whatsapp.com/send?phone=34688688760" target="_blank">WhatsApp</a> <a>|</a>
+      <a href="mailto:immsn13@gmail.com" target="_blank">Correo</a>
+    
+
+    </div>
+  
+
   </footer>
 
 </body>
