--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            
+            <p class="copyright">&copy; Copyright <strong>Iñaki Méndez</strong></p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
