--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="nav-link js-scroll" href="#work">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact">Redes Sociales</a>
+            <a class="nav-link js-scroll" href="#contact">Contacto</a>
           </li>
         </ul>
       </div>
@@ -133,10 +133,10 @@
                       Técnico informático apasionado de las nuevas tecnologías, con ganas de aprender, competitivo,trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
                     </p>
                     <p class="lead">
-                      Actualmente trabajo como promotor de Samsung en Media Markt, ofreciendo Atención personalizada a clientes, asesoramiento y venta de smartphones, tablets, wearables, accesorios, etc.
+                      Actualmente trabajo como promotor de Samsung en Media Markt, ofreciendo atención personalizada a clientes, asesoramiento y venta de smartphones, tablets, wearables, accesorios, etc.
                     </p>
                     <p class="lead">
-                      Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema, aplicando los protocolos 
+                      Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
                       de calidad y seguridad.  
                     </p>
                   </div>
