--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico Superior en Administración de Sistemas Informáticos en Red</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">IES Zubiri-Manteo BHI</span> / <span class="w-date">2018 - 2020</span>
+                        <span class="w-ctegory">IES Zubiri Manteo BHI</span> / <span class="w-date">2018 - 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -361,7 +361,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico en Sistemas Microinformáticos y Redes</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">IES Zubiri-Manteo BHI</span> / <span class="w-date">2016 - 2018</span>
+                        <span class="w-ctegory">IES Zubiri Manteo BHI</span> / <span class="w-date">2016 - 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
