--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="service-box">
+                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-social-windows"></i></span>
                 </div>
@@ -411,10 +412,12 @@
                    Tecnalia Research & Innovation
                   </p>
                 </div>
+              </a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-box">
+                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-leaf"></i></span>
                 </div>
@@ -424,12 +427,14 @@
                     MongoDB University
                   </p>
                 </div>
+              </a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-box">
+                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="service-ico">
-                  <span class="ico-circle"><i class="ion-social-wordpress"></i></span>
+                  <span class="ico-circle" ><i class="ion-social-wordpress"></i></span>
                 </div>
                 <div class="service-content">
                   <h2 class="s-title">Curso Wordpress</h2>
@@ -437,10 +442,12 @@
                     OpenWebinars
                   </p>
                 </div>
+              </a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-box">
+                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-earth"></i></span>
                 </div>
@@ -450,10 +457,12 @@
                     Tecnalia Research & Innovation
                   </p>
                 </div>
+              </a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-box">
+                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
                 </div>
@@ -463,10 +472,12 @@
                     Samsung España
                   </p>
                 </div>
+              </a>
               </div>
             </div>
             <div class="col-md-4">
               <div class="service-box">
+                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-unlocked"></i></span>
                 </div>
@@ -476,6 +487,7 @@
                     Udemy
                   </p>
                 </div>
+              </a>
               </div>
             </div>
           </div>
