--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="service-box">
-                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <a href="https://www.it-txartela.net/KZ/usuario/Estaticos.do?req=mod_SistemasOperativosWindows7" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-social-windows"></i></span>
                 </div>
@@ -417,7 +417,7 @@
             </div>
             <div class="col-md-4">
               <div class="service-box">
-                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <a href="https://university.mongodb.com/courses/M001/about" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-leaf"></i></span>
                 </div>
@@ -432,7 +432,7 @@
             </div>
             <div class="col-md-4">
               <div class="service-box">
-                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <a href="https://openwebinars.net/cursos/administracion-wordpress-profesional/" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle" ><i class="ion-social-wordpress"></i></span>
                 </div>
@@ -447,7 +447,7 @@
             </div>
             <div class="col-md-4">
               <div class="service-box">
-                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <a href="https://www.it-txartela.net/KZ/usuario/Estaticos.do?req=mod_InternetAvanzado" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-earth"></i></span>
                 </div>
@@ -477,7 +477,7 @@
             </div>
             <div class="col-md-4">
               <div class="service-box">
-                <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <a href="https://www.udemy.com/course/hacking-complete/" target="_blank">
                 <div class="service-ico">
                   <span class="ico-circle"><i class="ion-unlocked"></i></span>
                 </div>
