--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <meta property="og:title" content="Iñaki Méndez | Técnico Informático	">
+  <meta property="og:description" content="Técnico Informático">
+  <meta property="og:image" content="https://inakimendez.com/assets/img/intro-bg.jpg">
+  <meta property="og:url" content="https://inakimendez.com">
+  <meta name="twitter:card" content="summary_large_image">
+  
 </head>
 
 <body id="page-top">
