--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   ======================================================== -->
   <meta property="og:title" content="Iñaki Méndez | Técnico Informático	">
   <meta property="og:description" content="Técnico Informático">
-  <meta property="og:image" content="https://inakimendez.com/assets/img/share.png">
+  <meta property="og:image" content="https://inakimendez.com/assets/img/share.jpg">
   <meta property="og:url" content="https://inakimendez.com">
   <meta name="twitter:card" content="summary_large_image">
   
