--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   <meta property="og:title" content="Iñaki Méndez | Técnico Informático	">
-  <meta property="og:description" content="Técnico Informático">
+  <meta property="og:description" content="Página web personal.">
   <meta property="og:image" content="https://inakimendez.com/assets/img/link.jpg">
   <meta property="og:url" content="https://inakimendez.com">
   <meta name="twitter:card" content="summary_large_image">
