--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Iñaki Méndez | Técnico Informático</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta name="description" content="Soy Iñaki Méndez. Técnico informático, Promotor en Samsung, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress etc."/>
+  <meta name="keywords" content="iñaki mendez, iñaki, inaki, mendez">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
