--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Iñaki Méndez | Técnico Informático</title>
-  <meta name="description" content="Soy Iñaki Méndez. Técnico informático, Promotor en Samsung, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress, etc."/>
+  <meta name="description" content="Soy Iñaki Méndez. Técnico informático, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress, etc."/>
   <meta name="keywords" content="iñaki mendez, iñaki, inaki, mendez">
 
   <!-- Favicons -->
@@ -70,7 +70,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Soy Iñaki Méndez</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Técnico informático,Promotor en Samsung,Administrador de Redes,Administrador de Sistemas,Administrador de Wordpress</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Técnico informático,Administrador de Redes,Administrador de Sistemas,Administrador de Wordpress</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -175,7 +175,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Promotor</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Samsung</span> / <span class="w-date">Feb. 2019 - Actualidad</span>
+                        <span class="w-ctegory">Samsung</span> / <span class="w-date">Feb. 2019 - Jul. 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
