--- a/index.html
+++ b/index.html
@@ -163,19 +163,22 @@
             </div>
           </div>
         </div>
+
+
+
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-08.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Promotor</h2>
+                      <h2 class="w-title">Vendedor Informática</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Samsung</span> / <span class="w-date">Feb. 2019 - Jul. 2020</span>
+                        <span class="w-ctegory">Megabi Soluciones</span> / <span class="w-date">Dic. 2020 - Actualmente</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -192,12 +195,60 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-06.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico Informático</h2>
+                      <h2 class="w-title">Promotor de ventas</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Samsung</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <div class="work-img">
+                  <img src="assets/img/work-07.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Técnico de sistemas</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Sermicro</span> / <span class="w-date">Jul. 2020 - Ago. 2020</span>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <div class="work-img">
+                  <img src="assets/img/work-05.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Técnico de sistemas</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Xenon Computer</span> / <span class="w-date">Feb. 2020 - Mar. 2020</span>
                       </div>
@@ -216,7 +267,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-04.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -240,7 +291,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-03.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -264,7 +315,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-02.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -288,7 +339,7 @@
             <div class="work-box">
               <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
                 <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/work-01.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -308,7 +359,6 @@
               </a>
             </div>
           </div>
-
         </div>
       </div>
     </section>
