--- a/index.html
+++ b/index.html
@@ -386,6 +386,29 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
+                      <h2 class="w-title">Técnico Superior en Desarrollo de Aplicaciones Multiplataforma</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Centro de Estudios SEIM</span> / <span class="w-date">2020 - 2022</span>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="work-box">
+              <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
                       <h2 class="w-title">Técnico Superior en Administración de Sistemas Informáticos en Red</h2>
                       <div class="w-more">
                         <span class="w-ctegory">IES Zubiri Manteo BHI</span> / <span class="w-date">2018 - 2020</span>
