--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       Técnico informático apasionado de las nuevas tecnologías, con ganas de aprender, competitivo, trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
                     </p>
                     <p class="lead">
-                      Actualmente trabajo como promotor de Samsung en Media Markt, ofreciendo atención personalizada a clientes, asesoramiento y venta de smartphones, tablets, wearables, accesorios, etc.
+                      Actualmente trabajo como Técnico de Sistemas Informáticos en Megabi Soluciones Tecnológicas, virtualizando sistemas, gestionando copias de seguridad, reparando y manteniendo equipos, ofreciendo asistencia técnica en empresas, etc.
                     </p>
                     <p class="lead">
                       Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
