--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Vendedor Informática</h2>
+                      <h2 class="w-title">Técnico de sistemas</h2>
                       <div class="w-more">
                         <span class="w-ctegory">Megabi Soluciones</span> / <span class="w-date">Dic. 2020 - Actualmente</span>
                       </div>
@@ -226,7 +226,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico de sistemas</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Sermicro</span> / <span class="w-date">Jul. 2020 - Ago. 2020</span>
+                        <span class="w-ctegory">Grupo Sermicro</span> / <span class="w-date">Jul. 2020 - Ago. 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
