--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       <div class="about-info">
                         <p><span class="title-s">Nombre: </span> <span>Iñaki Méndez</span></p>
                         <p><span class="title-s">Título: </span> <span>Técnico Informático</span></p>
-                        <p><span class="title-s">Email: </span> <span>immsn13@gmail.com</span></p>
+                        <p><span class="title-s">Email: </span> <span>inaki@inaki.eus</span></p>
                         <p><span class="title-s">Teléfono: </span> <span>(+34) 688688760</span></p>
                       </div>
                     </div>
@@ -165,7 +165,32 @@
         </div>
 
 
-
+		<div class="row">
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="https://es.linkedin.com/in/inakimendez" target="_blank">
+                <div class="work-img">
+                  <img src="assets/img/work-08.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="work-content">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h2 class="w-title">Técnico de sistemas</h2>
+                      <div class="w-more">
+                        <span class="w-ctegory">Savvy Data Systems</span> / <span class="w-date">Jun. 2022 - Actualmente</span>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="w-like">
+                        <span class="ion-ios-plus-outline"></span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+		  
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
@@ -178,7 +203,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico de sistemas</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Megabi Soluciones</span> / <span class="w-date">Dic. 2020 - Actualmente</span>
+                        <span class="w-ctegory">Megabi Soluciones</span> / <span class="w-date">Dic. 2020 - Jun. 2022</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
