--- a/index.html
+++ b/index.html
@@ -408,9 +408,9 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Técnico Superior en Desarrollo de Aplicaciones Multiplataforma</h2>
+                      <h2 class="w-title">Curso de Especialización en Ciberseguridad en Entornos de las Tecnologías de la Información</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Centro de Estudios SEIM</span> / <span class="w-date">2020 - 2022</span>
+                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2020 - 2022</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -433,7 +433,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico Superior en Administración de Sistemas Informáticos en Red</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">IES Zubiri Manteo BHI</span> / <span class="w-date">2018 - 2020</span>
+                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2018 - 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -456,7 +456,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico en Sistemas Microinformáticos y Redes</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">IES Zubiri Manteo BHI</span> / <span class="w-date">2016 - 2018</span>
+                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2016 - 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
