changes in menu
add education to primary menu

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <a class="nav-link js-scroll" href="#work">Experiencia</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="#education">Educación</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contacto</a>
           </li>
         </ul>
@@ -387,7 +390,7 @@
     <!-- End Portfolio Section -->
 
      <!-- ======= Portfolio Section ======= -->
-     <section id="work" class="portfolio-mf sect-pt4 route">
+     <section id="education" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
