--- a/index.html
+++ b/index.html
@@ -616,10 +616,8 @@
                     </div>
                       <div class="socials">
                       <ul>
-                        <li><a href="mailto:immsn13@gmail.com" target="_blank"><span class="ico-circle"><i class="ion-email"></i></span></a></li>
+                        <li><a href="mailto:inaki@inaki.eus" target="_blank"><span class="ico-circle"><i class="ion-email"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/inakimendez/" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                        <li><a href="https://twitter.com/inaki_mendez" target="_blank"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                        <li><a href="https://www.instagram.com/inaki_mendez/"  target="_blank"><span class="ico-circle" target="_blank"><i class="ion-social-instagram"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
