--- a/index.html
+++ b/index.html
@@ -136,11 +136,14 @@
                       Técnico informático apasionado de las nuevas tecnologías, con ganas de aprender, competitivo, trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
                     </p>
                     <p class="lead">
-                      Actualmente trabajo como Técnico de Sistemas Informáticos en Megabi Soluciones Tecnológicas, virtualizando sistemas, gestionando copias de seguridad, reparando y manteniendo equipos, ofreciendo asistencia técnica en empresas, etc.
+                      Actualmente trabajo como Técnico de Sistemas en Savvy Data Systems, virtualizando sistemas, gestionando copias de seguridad, reparando y manteniendo equipos, etc.
                     </p>
                     <p class="lead">
                       Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
                       de calidad y seguridad.  
+					  <p class="lead">
+                      ¡En mi tiempo libre escribo guias y tutoriales de Linux, seguridad, redes y otros temas en Linuxbasico!
+                    </p>
                     </p>
                   </div>
                 </div>
