cambios en ubicación
posicionamiento local

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Iñaki Méndez | Técnico Informático</title>
-  <meta name="description" content="Soy Iñaki Méndez. Técnico informático, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress, etc."/>
-  <meta name="keywords" content="iñaki mendez, iñaki, inaki, mendez">
+  <title>Iñaki Méndez | Técnico Informático en Donostia</title>
+  <meta name="description" content="Soy Iñaki Méndez técnico informático de Donostia, Administrador de Redes, Administrador de Sistemas, Administrador de Wordpress, etc."/>
+  <meta name="keywords" content="iñaki mendez, tecnico informatico donostia, iñaki, mendez">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -133,7 +133,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Técnico informático apasionado de las nuevas tecnologías, con ganas de aprender, competitivo, trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
+                      Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
                     </p>
                     <p class="lead">
                       Actualmente trabajo como Técnico de Sistemas en Savvy Data Systems, virtualizando sistemas, gestionando copias de seguridad, reparando y manteniendo equipos, etc.
