--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Soy Iñaki Méndez</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Informático en Donostia,Administrador de Redes,Administrador de Sistemas,Administrador de Wordpress</span><strong class="text-slider"></strong></p>
-          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#contact" role="button">Contacto</a><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Sobre mí</a></p>
+           <!--<p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Sobre mí</a><a class="btn btn-primary btn js-scroll px-4" style="margin: 1%" href="#contact" role="button">Contacto</a></p>-->
         </div>
       </div>
     </div>
