--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href="tel:688688760s" target="_blank"><span class="ico-circle"><i class="ion-android-call"></i></span></a></li>
+                        <li><a href="tel:688688760" target="_blank"><span class="ico-circle"><i class="ion-android-call"></i></span></a></li>
                         <li><a href="mailto:inaki@inaki.eus" target="_blank"><span class="ico-circle"><i class="ion-email"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/inakimendez/" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                       </ul>
