--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
-                      <h2 class="w-title">Curso de Especialización en Ciberseguridad en Entornos de las Tecnologías de la Información</h2>
+                      <h2 class="w-title">Especialización en Ciberseguridad en Entornos de las TI</h2>
                       <div class="w-more">
                         <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2021 - 2022</span>
                       </div>
