--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Promotor de ventas</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Samsung</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span>
+                        <span class="w-ctegory">Samsung España</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -302,7 +302,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Vendedor Gama Blanca</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Media Markt</span> / <span class="w-date">Jun. 2018 - Ene. 2019 </span>
+                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Jun. 2018 - Ene. 2019 </span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -350,7 +350,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico Informático</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">MM Service</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span>
+                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -374,7 +374,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Vendedor Informática</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Media Markt</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span>
+                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
