--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                   <span class="ico-circle" ><i class="ion-social-wordpress"></i></span>
                 </div>
                 <div class="service-content">
-                  <h2 class="s-title">Curso Wordpress</h2>
+                  <h2 class="s-title">Wordpress</h2>
                   <p class="s-description text-center">
                     OpenWebinars
                   </p>
@@ -605,7 +605,7 @@
                   <span class="ico-circle"><i class="ion-unlocked"></i></span>
                 </div>
                 <div class="service-content">
-                  <h2 class="s-title">Ethical Hacking Course</h2>
+                  <h2 class="s-title">Ethical Hacking</h2>
                   <p class="s-description text-center">
                     Udemy
                   </p>
