--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                       Técnico informático en Donostia, competitivo, trabajador, creativo, con iniciativa y ganas de mejorar mis habilidades a diario.
                     </p>
                     <p class="lead">
-                      Actualmente trabajo como Técnico de Sistemas en Savvy Data Systems, virtualizando sistemas, gestionando copias de seguridad, reparando y manteniendo equipos, etc.
+                      Actualmente trabajo como Administrador de Sistemas en Savvy Data Systems, virtualizando sistemas, gestionando copias de seguridad, arrancando, reparando y manteniendo equipos, etc.
                     </p>
                     <p class="lead">
                       Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
