--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </p>
                     <p class="lead">
                       Soy capaz de configurar, administrar y mantener sistemas informáticos, garantizando la funcionalidad, la integridad de los recursos, servicios del sistema y aplicando los protocolos 
-                      de calidad y seguridad.  
+                      de calidad y seguridad correspondientes.  
 					  <p class="lead">
                       ¡En mi tiempo libre escribo guias y tutoriales de Linux, seguridad, redes y otros temas en Linuxbasico!
                     </p>
