--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="iñaki mendez, tecnico informatico donostia, iñaki, mendez">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/favicon.png"/>
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png"/>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
