--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="iñaki mendez, tecnico informatico donostia, iñaki, mendez">
 
   <!-- Favicons -->
-  <link rel="icon" href="assets/img/favicon.png"/>
+  <link rel="icon" href="assets/img/favicon.ico"/>
   <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png"/>
 
   <!-- Vendor CSS Files -->
