--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Promotor de ventas</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Samsung España</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span>
+                        <span class="w-ctegory">Samsung España</span> / <span class="w-date">Feb. 2019 - Nov. 2020</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -254,7 +254,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico de sistemas</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Grupo Sermicro</span> / <span class="w-date">Jul. 2020 - Ago. 2020</span>
+                        <span class="w-ctegory">Grupo Sermicro</span> / <span class="w-date">Jul. 2020 - Ago. 2020</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -278,7 +278,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico de sistemas</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Xenon Computer</span> / <span class="w-date">Feb. 2020 - Mar. 2020</span>
+                        <span class="w-ctegory">Xenon Computer</span> / <span class="w-date">Feb. 2020 - Mar. 2020</span> / <span class="w-location">Astigarraga</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -302,7 +302,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Vendedor Gama Blanca</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Jun. 2018 - Ene. 2019 </span>
+                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Jun. 2018 - Ene. 2019 </span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -326,7 +326,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico Informático</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Kamilnotebook</span> / <span class="w-date">Mar. 2018 - May. 2018</span>
+                        <span class="w-ctegory">Kamilnotebook</span> / <span class="w-date">Mar. 2018 - May. 2018</span> / <span class="w-location">Wroclaw</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -350,7 +350,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico Informático</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span>
+                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -374,7 +374,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Vendedor Informática</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span>
+                        <span class="w-ctegory">Media Markt Donostia</span> / <span class="w-date">Oct. 2017 - Feb. 2018</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -417,7 +417,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Especialización en Ciberseguridad en Entornos de las TI</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2021 - 2022</span>
+                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2021 - 2022</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -440,7 +440,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico Superior en Administración de Sistemas Informáticos en Red</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2018 - 2020</span>
+                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2018 - 2020</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -463,7 +463,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">Técnico en Sistemas Microinformáticos y Redes</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2016 - 2018</span>
+                        <span class="w-ctegory">IES Xabier Zubiri Manteo BHI</span> / <span class="w-date">2016 - 2018</span> / <span class="w-location">Donostia</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -486,7 +486,7 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Posicionamiento en buscadores SEO y SEM</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Nazaret Zentroa</span> / <span class="w-date">2022</span>
+                  <span class="w-ctegory">Nazaret Zentroa</span> / <span class="w-date">2022</span> / <span class="w-location">Donostia</span>
                 </div>
               </div>
               <div class="col-sm-4">
